--- a/package.json
+++ b/package.json
@@ -1,16 +1,8 @@
 {
-  "name": "fadfad-app",
+  "name": "fadfad",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "firebase": "^9.23.0",
-    "next": "13.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "build": "echo \"No build needed\""
   }
 }
